--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - python setup.py develop
 # command to run tests
 script:
-  - pytest --rootdir=src
+  - pytest
