--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - cd src
   - python setup.py develop
 # command to run tests
 script:
