--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
-  - cd src
+  - pushd src
   - python setup.py develop
+  - popd
 # command to run tests
 script:
   - pytest
