--- a/src/MANIFEST.in
+++ b/src/MANIFEST.in
@@ -1,4 +1,4 @@
 include LICENSE
 include README.rst
-recursive-include *.py *.json
-recursive-exclude *.pyc
+include scimschema/core_schemas/*.json
+recursive-exclude . *.pyc
