--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
 python:
-  - "3.6"
   - "3.6-dev"  # 3.6 development branch
-  - "3.7"
+  - "3.6"
   - "3.7-dev"  # 3.7 development branch
-  - "3.8"
+  - "3.7"
   - "3.8-dev"  # 3.8 development branch
+  - "3.8"
+  - "3.9-dev"  # 3.9 development branch
   - "nightly"  # nightly build
 
 # command to install dependencies
