--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py35, py36
+envlist = py35, py36, py37, py38
 
 [testenv]
 deps = pytest, pytest-xdist       # install pytest in the virtualenv where commands will be executed
