--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - "3.8-dev"  # 3.8 development branch
   - "3.8"
   - "3.9-dev"  # 3.9 development branch
-  - "nightly"  # nightly build
+#  - "nightly"  # nightly build
 
 # command to install dependencies
 install:
