--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install pipenv
       run: |
         pip install pipenv
-        pipenv install --dev
+        pipenv install -d
     - name: Run style tests
       run: |
         pipenv run checkstyle
