sequential install fix flaky python 3.6 agent

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install pipenv
       run: |
         pip install pipenv
-        pipenv install -d
+        pipenv install -d --sequential
     - name: Run style tests
       run: |
         pipenv run checkstyle
