--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -31,6 +31,6 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         BUILD_NUMBER: ${{ github.run_number }}
       run: |
-        pipenv install --dev
+        pipenv install --dev --sequential
         pipenv run build
         pipenv run deploy
