--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,3 +39,12 @@ jobs:
     - name: Run unit tests
       run: |
         pipenv run tests
+    - name: Build and publish
+      env:
+        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        BUILD_NUMBER: ${{ github.run_number }}
+      run: |
+        pipenv install --dev --sequential
+        pipenv run build
+        pipenv run deploy
