--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install pipenv
       run: |
         pip install pipenv
-        pipenv install -d --sequential --verbose
+        pipenv install -d
     - name: Run style tests
       run: |
         pipenv run checkstyle
