--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -33,6 +33,6 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         BUILD_NUMBER: ${{ github.run_number }}
       run: |
-        pipenv install --dev --sequential
+        pipenv install --dev
         pipenv run build
         pipenv run deploy
