--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,15 +26,9 @@ jobs:
       run: |
         pip install pipenv
         pipenv install -d
-    - name: Run style tests
+    - name: Run tests
       run: |
         pipenv run checkstyle
-    - name: Run import tests
-      run: |
         pipenv run checkimport
-    - name: Run syntax tests
-      run: |
         pipenv run checksyntax
-    - name: Run unit tests
-      run: |
         pipenv run tests
