--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,12 +24,13 @@ jobs:
     - name: Install dependencies
       run: |
         pip install pipenv
+
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         BUILD_NUMBER: ${{ github.run_number }}
       run: |
-        pipenv install --dev
+        pipenv install
         pipenv run build
         pipenv run deploy
