--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,35 +6,51 @@ name: Upload Python Package
 on:
   push:
     branches: [ master ]
-  release:
-    types: [created]
 
 jobs:
-  deploy:
 
+  release:
+    name: Create Release
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@master
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Changes in this Release
+          draft: false
+          prerelease: false
 
+  deploy:
+    needs: release
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v1
       with:
-        python-version: 3.9
+        python-version: '3.x'
 
     - name: Install dependencies
       run: |
-        pip install pipenv
+        pip install pipenv -d
         pipenv install
         pipenv run build
 
-#     - name: Build and publish
-#       env:
-#         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-#         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-#         BUILD_NUMBER: ${{ github.run_number }}
-#       run: |
-#         pipenv run deploy
-
+    - name: Run tests
+      run: |
+        pipenv run checkstyle
+        pipenv run checkimport
+        pipenv run checksyntax
+        pipenv run tests
 
     - name: Publish distribution 📦 to Test PyPI
       uses: pypa/gh-action-pypi-publish@master
@@ -42,8 +58,8 @@ jobs:
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
 
-    - name: Publish distribution 📦 to PyPI
-      if: startsWith(github.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
+#     - name: Publish distribution 📦 to PyPI
+#       if: startsWith(github.ref, 'refs/tags')
+#       uses: pypa/gh-action-pypi-publish@master
+#       with:
+#         password: ${{ secrets.PYPI_API_TOKEN }}
