--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 pytest = "*"
 setuptools = "*"
 twine = "*"
-scimschema = {editable = true, path = "./src"}
+scimschema = {path = "./src"}
 mypy = "*"
 isort = "*"
 pytest-cov = "*"
@@ -15,9 +15,11 @@ black = "*"
 
 [scripts]
 tests = "pytest"
-check-style = "black . --check"
-check-import = "isort . --check"
-check-syntax = "mypy ./src/scimschema"
+checkstyle = "black . --check"
+checkimport = "isort . --check"
+checksyntax = "mypy ./src/scimschema"
+build = "python src/setup.py sdist bdist_wheel"
+deploy = "twine upload dist/* -r testpypi"
 
 [pipenv]
 allow_prereleases = true
