--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -61,7 +61,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: $(cat /home/runner/work/scimschema/src/scimschema/VERSION)${{ GITHUB_RUN_NUMBER }}
+        tag_name: $(cat /home/runner/work/scimschema/src/scimschema/VERSION)${{ github.run_number }}
         release_name: Release ${{ github.ref }}
         body: |
           Changes in this Release
