--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -61,8 +61,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: $(cat /home/runner/work/scimschema/src/scimschema/VERSION)${{ github.run_number }}
-        release_name: Release ${{ github.ref }}
+        tag_name: $(cat /home/runner/work/scimschema/src/VERSION)
+        release_name: Release $(cat /home/runner/work/scimschema/src/VERSION)
         body: |
           Changes in this Release
         draft: true
