--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -3,7 +3,7 @@ author = "Gordon So"
 author_email = gordonkwso@gmail.com
 
 name = scimschema
-version = attr: src.VERSION
+version = attr: VERSION
 description = "A validator for System for Cross domain Identity Management (SCIM) responses given predefine schemas"
 long_description = file: README.rst, LICENSE
 license = OSI Approved :: MIT License
