--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,14 +23,36 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install pipenv
+    - name: Get full python version
+      id: full-python-version
+      run: echo ::set-output name=version::$(python -c "import sys; print('-'.join(str(v) for v in sys.version_info))")
+
+    - name: Install poetry
       run: |
-        pip install pipenv
-        pipenv install -d
+        curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
+        python get-poetry.py -y
+        echo "::set-env name=PATH::$HOME/.poetry/bin:$PATH"
+
+    - name: Configure poetry
+      run: poetry config virtualenvs.in-project true
+
+    - name: Set up cache
+      uses: actions/cache@v1
+      id: cache
+      with:
+        path: .venv
+        key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+
+    - name: Ensure cache is healthy
+      if: steps.cache.outputs.cache-hit == 'true'
+      run: poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
+
+    - name: Install Dependencies
+      run: poetry install
 
     - name: Run tests
       run: |
-        pipenv run checkstyle
-        pipenv run checkimport
-        pipenv run checksyntax
-        pipenv run tests
+        poetry run black . --check
+        poetry run isort . --check
+        poetry run mypy ./scimschema ./tests
+        poetry run pytest
