--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,25 +21,45 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install dependencies
+    - name: Install poetry
       run: |
-        pip install pipenv
-        pipenv install -d
-        pipenv run build
+        curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
+        python get-poetry.py -y
+        echo "::set-env name=PATH::$HOME/.poetry/bin:$PATH"
+
+    - name: Configure poetry
+      run: poetry config virtualenvs.in-project true
+
+    - name: Set up cache
+      uses: actions/cache@v1
+      id: cache
+      with:
+        path: .venv
+        key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+
+    - name: Ensure cache is healthy
+      if: steps.cache.outputs.cache-hit == 'true'
+      run: poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
+
+    - name: Install Dependencies
+      run: poetry install
 
     - name: Run tests
       run: |
-        pipenv run checkstyle
-        pipenv run checkimport
-        pipenv run checksyntax
-        pipenv run tests
-        pipenv run build
+        poetry run black . --check
+        poetry run isort . --check
+        poetry run mypy ./scimschema ./tests
+        poetry run pytest
+        poetry build
+        poetry config repositories.testpypi https://test.pypi.org/legacy/
+        poetry publish -r testpypi
 
-    - name: Publish distribution 📦 to Test PyPI
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/
+    - name: Publish
+      env:
+        PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
+      run: |
+        poetry config pypi-token.pypi $PYPI_TOKEN
+        poetry publish  --build
 
 #     - name: Publish distribution 📦 to PyPI
 #       if: startsWith(github.ref, 'refs/tags')
@@ -61,8 +81,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: $(cat /home/runner/work/scimschema/src/VERSION)
-        release_name: Release $(cat /home/runner/work/scimschema/src/VERSION)
+        tag_name: $(cat /home/runner/work/scimschema/VERSION)
+        release_name: Release $(cat /home/runner/work/scimschema/VERSION)
         body: |
           Changes in this Release
         draft: true
