--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
         python get-poetry.py -y
-        echo "::set-env name=PATH::$HOME/.poetry/bin:$PATH"
+        source $HOME/.poetry/env
 
     - name: Configure poetry
       run: poetry config virtualenvs.in-project true
