--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -25,8 +25,7 @@ jobs:
       run: |
         curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
         python get-poetry.py -y
-        export PATH="$HOME/.poetry/bin:$PATH"
-        source $HOME/.poetry/env
+        echo "##vso[task.setvariable variable=PATH]${PATH}:$HOME/.poetry/bin"
 
     - name: Configure poetry
       run: poetry config virtualenvs.in-project true
