--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,7 +28,9 @@ jobs:
         echo "##vso[task.setvariable variable=PATH]${PATH}:$HOME/.poetry/bin"
 
     - name: Configure poetry
-      run: poetry config virtualenvs.in-project true
+      run: |
+        source $HOME/.poetry/env
+        poetry config virtualenvs.in-project true
 
     - name: Set up cache
       uses: actions/cache@v1
