--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -25,7 +25,6 @@ jobs:
       run: |
         curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
         python get-poetry.py -y
-        echo "##vso[task.setvariable variable=PATH]${PATH}:$HOME/.poetry/bin"
 
     - name: Configure poetry
       run: |
@@ -41,13 +40,18 @@ jobs:
 
     - name: Ensure cache is healthy
       if: steps.cache.outputs.cache-hit == 'true'
-      run: poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
+      run: |
+        source $HOME/.poetry/env
+        poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
 
     - name: Install Dependencies
-      run: poetry install
+      run: |
+        source $HOME/.poetry/env
+        poetry install
 
     - name: Run tests
       run: |
+        source $HOME/.poetry/env
         poetry run black . --check
         poetry run isort . --check
         poetry run mypy ./scimschema ./tests
@@ -60,6 +64,7 @@ jobs:
       env:
         PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
       run: |
+        source $HOME/.poetry/env
         poetry config pypi-token.pypi $PYPI_TOKEN
         poetry publish  --build
 
