--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -62,10 +62,9 @@ jobs:
         PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
       run: |
         source $HOME/.poetry/env
-        poetry config pypi-token.pypi $PYPI_TOKEN
-        poetry config http-basic.pypi
+        export POETRY_PYPI_TOKEN_PYPI=$PYPI_TOKEN
         poetry config repositories.testpypi https://test.pypi.org/legacy/
-        poetry publish --build -r testpypi --username "__token__" --password $PYPI_TOKEN
+        poetry publish --build -r testpypi
 
 #     - name: Publish distribution 📦 to PyPI
 #       if: startsWith(github.ref, 'refs/tags')
