--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -4,10 +4,8 @@
 name: Upload Python Package
 
 on:
-  pull_request:
-    branches: [ master ]
-#   push:
-#     branches: [ master ]
+   push:
+     branches: [ master ]
 
 jobs:
 
@@ -57,7 +55,7 @@ jobs:
         poetry run mypy ./scimschema ./tests
         poetry run pytest
 
-    - name: Publish
+    - name: Publish Test
       env:
         PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
       run: |
@@ -68,6 +66,17 @@ jobs:
         poetry config http-basic.testpypi "__token__" "${PYPI_TOKEN}"
         poetry config repositories.testpypi https://test.pypi.org/legacy/
         poetry publish --build -r testpypi
+
+    - name: Publish
+      env:
+        PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+      run: |
+        source $HOME/.poetry/env
+        export POETRY_PYPI_TOKEN_PYPI=$PYPI_TOKEN
+
+        poetry config pypi-token.pypi $PYPI_TOKEN
+        poetry config http-basic.pypi "__token__" "${PYPI_TOKEN}"
+        poetry publish --build
 
 #     - name: Publish distribution 📦 to PyPI
 #       if: startsWith(github.ref, 'refs/tags')
