--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -4,8 +4,10 @@
 name: Upload Python Package
 
 on:
-   push:
-     branches: [ master ]
+  pull_request:
+    branches: [ master ]
+#   push:
+#     branches: [ master ]
 
 jobs:
 
@@ -55,28 +57,28 @@ jobs:
         poetry run mypy ./scimschema ./tests
         poetry run pytest
 
-    - name: Publish Test
-      env:
-        PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
-      run: |
-        source $HOME/.poetry/env
-        export POETRY_PYPI_TOKEN_PYPI=$PYPI_TOKEN
-
-        poetry config pypi-token.testpypi $PYPI_TOKEN
-        poetry config http-basic.testpypi "__token__" "${PYPI_TOKEN}"
-        poetry config repositories.testpypi https://test.pypi.org/legacy/
-        poetry publish --build -r testpypi
-
-    - name: Publish
-      env:
-        PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-      run: |
-        source $HOME/.poetry/env
-        export POETRY_PYPI_TOKEN_PYPI=$PYPI_TOKEN
-
-        poetry config pypi-token.pypi $PYPI_TOKEN
-        poetry config http-basic.pypi "__token__" "${PYPI_TOKEN}"
-        poetry publish --build
+#    - name: Publish Test
+#      env:
+#        PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
+#      run: |
+#        source $HOME/.poetry/env
+#        export POETRY_PYPI_TOKEN_PYPI=$PYPI_TOKEN
+#
+#        poetry config pypi-token.testpypi $PYPI_TOKEN
+#        poetry config http-basic.testpypi "__token__" "${PYPI_TOKEN}"
+#        poetry config repositories.testpypi https://test.pypi.org/legacy/
+#        poetry publish --build -r testpypi
+#
+#    - name: Publish
+#      env:
+#        PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+#      run: |
+#        source $HOME/.poetry/env
+#        export POETRY_PYPI_TOKEN_PYPI=$PYPI_TOKEN
+#
+#        poetry config pypi-token.pypi $PYPI_TOKEN
+#        poetry config http-basic.pypi "__token__" "${PYPI_TOKEN}"
+#        poetry publish --build
 
 #     - name: Publish distribution 📦 to PyPI
 #       if: startsWith(github.ref, 'refs/tags')
