--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -76,5 +76,5 @@ jobs:
         release_name: Release ${{ steps.vars.outputs.version }}
         body: |
           Changes in this Release
-        draft: true
-        prerelease: true
+        draft: false
+        prerelease: false
