--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -3,8 +3,10 @@
 name: Python package and publish
 
 on:
-  push:
+  pull_request:
     branches: [ master ]
+#  push:
+#    branches: [ master ]
 
 jobs:
 
@@ -79,25 +81,25 @@ jobs:
         draft: false
         prerelease: false
 
-      - name: Publish Test
-        env:
-          PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        run: |
-          source $HOME/.poetry/env
-          export POETRY_PYPI_TOKEN_PYPI=$PYPI_TOKEN
+    - name: Publish Test
+      env:
+        PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
+      run: |
+        source $HOME/.poetry/env
+        export POETRY_PYPI_TOKEN_PYPI=$PYPI_TOKEN
 
-          poetry config pypi-token.testpypi $PYPI_TOKEN
-          poetry config http-basic.testpypi "__token__" "${PYPI_TOKEN}"
-          poetry config repositories.testpypi https://test.pypi.org/legacy/
-          poetry publish --build -r testpypi
+        poetry config pypi-token.testpypi $PYPI_TOKEN
+        poetry config http-basic.testpypi "__token__" "${PYPI_TOKEN}"
+        poetry config repositories.testpypi https://test.pypi.org/legacy/
+        poetry publish --build -r testpypi
 
-      - name: Publish
-        env:
-          PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-        run: |
-          source $HOME/.poetry/env
-          export POETRY_PYPI_TOKEN_PYPI=$PYPI_TOKEN
+    - name: Publish
+      env:
+        PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+      run: |
+        source $HOME/.poetry/env
+        export POETRY_PYPI_TOKEN_PYPI=$PYPI_TOKEN
 
-          poetry config pypi-token.pypi $PYPI_TOKEN
-          poetry config http-basic.pypi "__token__" "${PYPI_TOKEN}"
-          poetry publish --build
+        poetry config pypi-token.pypi $PYPI_TOKEN
+        poetry config http-basic.pypi "__token__" "${PYPI_TOKEN}"
+        poetry publish --build
