--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -3,10 +3,8 @@
 name: Python package and publish
 
 on:
-  pull_request:
+  push:
     branches: [ master ]
-#  push:
-#    branches: [ master ]
 
 jobs:
 
