--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,6 +57,7 @@ jobs:
   Release:
     name: Create Release
     needs: Test
+    
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -81,6 +82,7 @@ jobs:
 
   Publish:
     name: Publish to Pypi
+    needs: Release
 
     runs-on: ubuntu-latest
     steps:
