--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,6 @@
 # This workflow will install Python dependencies, run tests
 
-name: Python application
+name: Pull request checks
 
 on:
   pull_request:
