--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -54,9 +54,10 @@ jobs:
         poetry run mypy ./scimschema ./tests
         poetry run pytest
         
-  release:
+  Release:
     name: Create Release
     needs: Test
+    
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -78,6 +79,29 @@ jobs:
           Changes in this Release
         draft: false
         prerelease: false
+
+  Publish:
+    name: Publish to Pypi
+    needs: Release
+
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v1
+      with:
+        python-version: '3.x'
+
+    - name: Install poetry
+      run: |
+        curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
+        python get-poetry.py -y
+
+    - name: Configure poetry
+      run: |
+        source $HOME/.poetry/env
+        poetry config virtualenvs.in-project true
 
     - name: Publish Test
       env:
