--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -113,7 +113,7 @@ jobs:
         poetry config pypi-token.testpypi $PYPI_TOKEN
         poetry config http-basic.testpypi "__token__" "${PYPI_TOKEN}"
         poetry config repositories.testpypi https://test.pypi.org/legacy/
-        poetry publish --build -r testpypi
+        poetry publish --build -r testpypi --no-interaction -vvv
 
     - name: Publish
       env:
@@ -124,4 +124,4 @@ jobs:
 
         poetry config pypi-token.pypi $PYPI_TOKEN
         poetry config http-basic.pypi "__token__" "${PYPI_TOKEN}"
-        poetry publish --build
+        poetry publish --build --no-interaction -vvv
