--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -124,4 +124,5 @@ jobs:
 
         poetry config pypi-token.pypi $PYPI_TOKEN
         poetry config http-basic.pypi "__token__" "${PYPI_TOKEN}"
+        poetry config repositories.testpypi https://pypi.org/
         poetry publish --build
