--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -103,17 +103,17 @@ jobs:
         source $HOME/.poetry/env
         poetry config virtualenvs.in-project true
 
-    - name: Publish Test
-      env:
-        TEST_PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
-      run: |
-        source $HOME/.poetry/env
-        export POETRY_PYPI_TOKEN_PYPI=$PYPI_TOKEN
-
-        poetry config pypi-token.testpypi $TEST_PYPI_TOKEN
-        poetry config http-basic.testpypi "__token__" "${PYPI_TOKEN}"
-        poetry config repositories.testpypi https://test.pypi.org/legacy/
-        poetry publish --build -r testpypi --no-interaction -vvv
+#    - name: Publish Test
+#      env:
+#        TEST_PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
+#      run: |
+#        source $HOME/.poetry/env
+#        export POETRY_PYPI_TOKEN_PYPI=$TEST_PYPI_TOKEN
+#
+#        poetry config pypi-token.testpypi $TEST_PYPI_TOKEN
+#        poetry config http-basic.testpypi "__token__" "${PYPI_TOKEN}"
+#        poetry config repositories.testpypi https://test.pypi.org/legacy/
+#        poetry publish --build -r testpypi --no-interaction -vvv
 
     - name: Publish
       env:
