--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -124,5 +124,5 @@ jobs:
 
         poetry config pypi-token.pypi $PYPI_TOKEN
         poetry config http-basic.pypi "__token__" "${PYPI_TOKEN}"
-        poetry config repositories.pypi https://pypi.org/
+        poetry config repositories.pypi https://upload.pypi.org/legacy/
         poetry publish --build -r pypi --no-interaction -vvv
