--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ include = [
     "VERSION",
     "README.rst",
     "scimschema/core_schemas/*.json",
+    "py.typed",
 ]
 homepage = "https://github.com/GordonSo/scimschema"
 repository = "https://github.com/GordonSo/scimschema"
