--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,9 @@ include = [
 ]
 homepage = "https://github.com/GordonSo/scimschema"
 repository = "https://github.com/GordonSo/scimschema"
+readme = "README.rst"
 keywords = ["scimschema", "scim"]
-version = "0.2.91"
+version = "0.2.92"
 
 
 [tool.poetry.dependencies]
